--- a/src/index.html
+++ b/src/index.html
@@ -11,7 +11,17 @@
   <body>
     <noscript>You need to enable Javascript to run this application.</noscript>
     <div id="app">
-      <!-- Your react app will be rendered here -->
+      const siteProps = {
+        name: "Alexandrie Grenier",
+        title: "Web Designer & Content Creator",
+        email: "alex@example.com",
+        gitHub: "microsoft",
+        instagram: "microsoft",
+        linkedIn: "satyanadella",
+        medium: "",
+        twitter: "microsoft",
+        youTube: "microsoft",
+      };
     </div>
     <script type="module" src="index.js"></script>
   </body>
